benchmarks/c/pregen/ragel/submatch_12__alt1_8.c
#line 1 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
#include <assert.h>
#include "ragel/common.c"

const char *delim = "\n";


#line 34 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"



#line 10 "gen/ragel/submatch_12__alt1_8.c"
static const int m_start = 9;
static const int m_first_final = 9;
static const int m_error = 0;

static const int m_en_main = 9;


#line 36 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"


static void lex(Input *in, Output *out)
{
	char *p = in->p;
	char *pe = in->pe;
	const char
	*a1, *b1, *c1, *d1, *e1, *f1, *g1, *h1,
	*a2, *b2, *c2, *d2, *e2, *f2, *g2, *h2;
	int cs;
	

#line 28 "gen/ragel/submatch_12__alt1_8.c"
	{
		cs = (int)m_start;
	}
	
#line 47 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"


#line 33 "gen/ragel/submatch_12__alt1_8.c"
{
		switch ( cs ) {
			case 9:
			goto st_case_9;
			case 0:
			goto st_case_0;
			case 1:
			goto st_case_1;
			case 2:
			goto st_case_2;
			case 3:
			goto st_case_3;
			case 4:
			goto st_case_4;
			case 5:
			goto st_case_5;
			case 6:
			goto st_case_6;
			case 7:
			goto st_case_7;
			case 8:
			goto st_case_8;
		}
		_ctr2:
			{
#line 19 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			a2 = p; b1 = b2 = c1 = c2 = d1 = d2 = e1 = e2 = f1 = f2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 61 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 21 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			
			if (a1)      { outc(out, 'A'); outs(out, a1, a2); }
			else if (b1) { outc(out, 'B'); outs(out, b1, b2); }
			else if (c1) { outc(out, 'C'); outs(out, c1, c2); }
			else if (d1) { outc(out, 'D'); outs(out, d1, d2); }
			else if (e1) { outc(out, 'E'); outs(out, e1, e2); }
			else if (f1) { outc(out, 'F'); outs(out, f1, f2); }
			else if (g1) { outc(out, 'G'); outs(out, g1, g2); }
			else if (h1) { outc(out, 'H'); outs(out, h1, h2); }
			outc(out, '\n');
		}
		
#line 76 "gen/ragel/submatch_12__alt1_8.c"

		goto _st9;
		_ctr4:
			{
#line 12 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			b2 = p; a1 = a2 = c1 = c2 = d1 = d2 = e1 = e2 = f1 = f2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 83 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 21 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			
			if (a1)      { outc(out, 'A'); outs(out, a1, a2); }
			else if (b1) { outc(out, 'B'); outs(out, b1, b2); }
			else if (c1) { outc(out, 'C'); outs(out, c1, c2); }
			else if (d1) { outc(out, 'D'); outs(out, d1, d2); }
			else if (e1) { outc(out, 'E'); outs(out, e1, e2); }
			else if (f1) { outc(out, 'F'); outs(out, f1, f2); }
			else if (g1) { outc(out, 'G'); outs(out, g1, g2); }
			else if (h1) { outc(out, 'H'); outs(out, h1, h2); }
			outc(out, '\n');
		}
		
#line 98 "gen/ragel/submatch_12__alt1_8.c"

		goto _st9;
		_ctr6:
			{
#line 13 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			c2 = p; a1 = a2 = b1 = b2 = d1 = d2 = e1 = e2 = f1 = f2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 105 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 21 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			
			if (a1)      { outc(out, 'A'); outs(out, a1, a2); }
			else if (b1) { outc(out, 'B'); outs(out, b1, b2); }
			else if (c1) { outc(out, 'C'); outs(out, c1, c2); }
			else if (d1) { outc(out, 'D'); outs(out, d1, d2); }
			else if (e1) { outc(out, 'E'); outs(out, e1, e2); }
			else if (f1) { outc(out, 'F'); outs(out, f1, f2); }
			else if (g1) { outc(out, 'G'); outs(out, g1, g2); }
			else if (h1) { outc(out, 'H'); outs(out, h1, h2); }
			outc(out, '\n');
		}
		
#line 120 "gen/ragel/submatch_12__alt1_8.c"

		goto _st9;
		_ctr8:
			{
#line 14 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			d2 = p; a1 = a2 = b1 = b2 = c1 = c2 = e1 = e2 = f1 = f2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 127 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 21 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			
			if (a1)      { outc(out, 'A'); outs(out, a1, a2); }
			else if (b1) { outc(out, 'B'); outs(out, b1, b2); }
			else if (c1) { outc(out, 'C'); outs(out, c1, c2); }
			else if (d1) { outc(out, 'D'); outs(out, d1, d2); }
			else if (e1) { outc(out, 'E'); outs(out, e1, e2); }
			else if (f1) { outc(out, 'F'); outs(out, f1, f2); }
			else if (g1) { outc(out, 'G'); outs(out, g1, g2); }
			else if (h1) { outc(out, 'H'); outs(out, h1, h2); }
			outc(out, '\n');
		}
		
#line 142 "gen/ragel/submatch_12__alt1_8.c"

		goto _st9;
		_ctr10:
			{
#line 15 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			e2 = p; a1 = a2 = b1 = b2 = c1 = c2 = d1 = d2 = f1 = f2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 149 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 21 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			
			if (a1)      { outc(out, 'A'); outs(out, a1, a2); }
			else if (b1) { outc(out, 'B'); outs(out, b1, b2); }
			else if (c1) { outc(out, 'C'); outs(out, c1, c2); }
			else if (d1) { outc(out, 'D'); outs(out, d1, d2); }
			else if (e1) { outc(out, 'E'); outs(out, e1, e2); }
			else if (f1) { outc(out, 'F'); outs(out, f1, f2); }
			else if (g1) { outc(out, 'G'); outs(out, g1, g2); }
			else if (h1) { outc(out, 'H'); outs(out, h1, h2); }
			outc(out, '\n');
		}
		
#line 164 "gen/ragel/submatch_12__alt1_8.c"

		goto _st9;
		_ctr12:
			{
#line 16 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			f2 = p; a1 = a2 = b1 = b2 = c1 = c2 = d1 = d2 = e1 = e2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 171 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 21 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			
			if (a1)      { outc(out, 'A'); outs(out, a1, a2); }
			else if (b1) { outc(out, 'B'); outs(out, b1, b2); }
			else if (c1) { outc(out, 'C'); outs(out, c1, c2); }
			else if (d1) { outc(out, 'D'); outs(out, d1, d2); }
			else if (e1) { outc(out, 'E'); outs(out, e1, e2); }
			else if (f1) { outc(out, 'F'); outs(out, f1, f2); }
			else if (g1) { outc(out, 'G'); outs(out, g1, g2); }
			else if (h1) { outc(out, 'H'); outs(out, h1, h2); }
			outc(out, '\n');
		}
		
#line 186 "gen/ragel/submatch_12__alt1_8.c"

		goto _st9;
		_ctr14:
			{
#line 17 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			g2 = p; a1 = a2 = b1 = b2 = c1 = c2 = d1 = d2 = e1 = e2 = f1 = f2 = h1 = h2 = NULL; }
		
#line 193 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 21 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			
			if (a1)      { outc(out, 'A'); outs(out, a1, a2); }
			else if (b1) { outc(out, 'B'); outs(out, b1, b2); }
			else if (c1) { outc(out, 'C'); outs(out, c1, c2); }
			else if (d1) { outc(out, 'D'); outs(out, d1, d2); }
			else if (e1) { outc(out, 'E'); outs(out, e1, e2); }
			else if (f1) { outc(out, 'F'); outs(out, f1, f2); }
			else if (g1) { outc(out, 'G'); outs(out, g1, g2); }
			else if (h1) { outc(out, 'H'); outs(out, h1, h2); }
			outc(out, '\n');
		}
		
#line 208 "gen/ragel/submatch_12__alt1_8.c"

		goto _st9;
		_ctr16:
			{
#line 18 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			h2 = p; a1 = a2 = b1 = b2 = c1 = c2 = d1 = d2 = e1 = e2 = f1 = f2 = g1 = g2 = NULL; }
		
#line 215 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 21 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			
			if (a1)      { outc(out, 'A'); outs(out, a1, a2); }
			else if (b1) { outc(out, 'B'); outs(out, b1, b2); }
			else if (c1) { outc(out, 'C'); outs(out, c1, c2); }
			else if (d1) { outc(out, 'D'); outs(out, d1, d2); }
			else if (e1) { outc(out, 'E'); outs(out, e1, e2); }
			else if (f1) { outc(out, 'F'); outs(out, f1, f2); }
			else if (g1) { outc(out, 'G'); outs(out, g1, g2); }
			else if (h1) { outc(out, 'H'); outs(out, h1, h2); }
			outc(out, '\n');
		}
		
#line 230 "gen/ragel/submatch_12__alt1_8.c"

		goto _st9;
		_ctr18:
			{
#line 12 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			b1 = p; }
		
#line 237 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 12 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			b2 = p; a1 = a2 = c1 = c2 = d1 = d2 = e1 = e2 = f1 = f2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 242 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 13 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			c1 = p; }
		
#line 247 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 13 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			c2 = p; a1 = a2 = b1 = b2 = d1 = d2 = e1 = e2 = f1 = f2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 252 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 14 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			d1 = p; }
		
#line 257 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 14 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			d2 = p; a1 = a2 = b1 = b2 = c1 = c2 = e1 = e2 = f1 = f2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 262 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 15 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			e1 = p; }
		
#line 267 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 15 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			e2 = p; a1 = a2 = b1 = b2 = c1 = c2 = d1 = d2 = f1 = f2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 272 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 16 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			f1 = p; }
		
#line 277 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 16 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			f2 = p; a1 = a2 = b1 = b2 = c1 = c2 = d1 = d2 = e1 = e2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 282 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 17 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			g1 = p; }
		
#line 287 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 17 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			g2 = p; a1 = a2 = b1 = b2 = c1 = c2 = d1 = d2 = e1 = e2 = f1 = f2 = h1 = h2 = NULL; }
		
#line 292 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 18 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			h1 = p; }
		
#line 297 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 18 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			h2 = p; a1 = a2 = b1 = b2 = c1 = c2 = d1 = d2 = e1 = e2 = f1 = f2 = g1 = g2 = NULL; }
		
#line 302 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 19 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			a1 = p; }
		
#line 307 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 19 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			a2 = p; b1 = b2 = c1 = c2 = d1 = d2 = e1 = e2 = f1 = f2 = g1 = g2 = h1 = h2 = NULL; }
		
#line 312 "gen/ragel/submatch_12__alt1_8.c"

			{
#line 21 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			
			if (a1)      { outc(out, 'A'); outs(out, a1, a2); }
			else if (b1) { outc(out, 'B'); outs(out, b1, b2); }
			else if (c1) { outc(out, 'C'); outs(out, c1, c2); }
			else if (d1) { outc(out, 'D'); outs(out, d1, d2); }
			else if (e1) { outc(out, 'E'); outs(out, e1, e2); }
			else if (f1) { outc(out, 'F'); outs(out, f1, f2); }
			else if (g1) { outc(out, 'G'); outs(out, g1, g2); }
			else if (h1) { outc(out, 'H'); outs(out, h1, h2); }
			outc(out, '\n');
		}
		
#line 327 "gen/ragel/submatch_12__alt1_8.c"

		goto _st9;
		_st9:
		p+= 1;
		st_case_9:
		if ( p == pe )
			goto _out9;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr18;
			}
			case 97: {
				goto _ctr19;
			}
			case 98: {
				goto _ctr20;
			}
			case 99: {
				goto _ctr21;
			}
			case 100: {
				goto _ctr22;
			}
			case 101: {
				goto _ctr23;
			}
			case 102: {
				goto _ctr24;
			}
			case 103: {
				goto _ctr25;
			}
			case 104: {
				goto _ctr26;
			}
		}
		goto _st0;
		_st0:
		st_case_0:
		goto _out0;
		_ctr19:
			{
#line 19 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			a1 = p; }
		
#line 372 "gen/ragel/submatch_12__alt1_8.c"

		goto _st1;
		_st1:
		p+= 1;
		st_case_1:
		if ( p == pe )
			goto _out1;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr2;
			}
			case 97: {
				goto _st1;
			}
		}
		goto _st0;
		_ctr20:
			{
#line 12 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			b1 = p; }
		
#line 393 "gen/ragel/submatch_12__alt1_8.c"

		goto _st2;
		_st2:
		p+= 1;
		st_case_2:
		if ( p == pe )
			goto _out2;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr4;
			}
			case 98: {
				goto _st2;
			}
		}
		goto _st0;
		_ctr21:
			{
#line 13 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			c1 = p; }
		
#line 414 "gen/ragel/submatch_12__alt1_8.c"

		goto _st3;
		_st3:
		p+= 1;
		st_case_3:
		if ( p == pe )
			goto _out3;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr6;
			}
			case 99: {
				goto _st3;
			}
		}
		goto _st0;
		_ctr22:
			{
#line 14 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			d1 = p; }
		
#line 435 "gen/ragel/submatch_12__alt1_8.c"

		goto _st4;
		_st4:
		p+= 1;
		st_case_4:
		if ( p == pe )
			goto _out4;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr8;
			}
			case 100: {
				goto _st4;
			}
		}
		goto _st0;
		_ctr23:
			{
#line 15 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			e1 = p; }
		
#line 456 "gen/ragel/submatch_12__alt1_8.c"

		goto _st5;
		_st5:
		p+= 1;
		st_case_5:
		if ( p == pe )
			goto _out5;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr10;
			}
			case 101: {
				goto _st5;
			}
		}
		goto _st0;
		_ctr24:
			{
#line 16 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			f1 = p; }
		
#line 477 "gen/ragel/submatch_12__alt1_8.c"

		goto _st6;
		_st6:
		p+= 1;
		st_case_6:
		if ( p == pe )
			goto _out6;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr12;
			}
			case 102: {
				goto _st6;
			}
		}
		goto _st0;
		_ctr25:
			{
#line 17 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			g1 = p; }
		
#line 498 "gen/ragel/submatch_12__alt1_8.c"

		goto _st7;
		_st7:
		p+= 1;
		st_case_7:
		if ( p == pe )
			goto _out7;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr14;
			}
			case 103: {
				goto _st7;
			}
		}
		goto _st0;
		_ctr26:
			{
#line 18 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"
			h1 = p; }
		
#line 519 "gen/ragel/submatch_12__alt1_8.c"

		goto _st8;
		_st8:
		p+= 1;
		st_case_8:
		if ( p == pe )
			goto _out8;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr16;
			}
			case 104: {
				goto _st8;
			}
		}
		goto _st0;
		_out9: cs = 9; goto _out; 
		_out0: cs = 0; goto _out; 
		_out1: cs = 1; goto _out; 
		_out2: cs = 2; goto _out; 
		_out3: cs = 3; goto _out; 
		_out4: cs = 4; goto _out; 
		_out5: cs = 5; goto _out; 
		_out6: cs = 6; goto _out; 
		_out7: cs = 7; goto _out; 
		_out8: cs = 8; goto _out; 
		_out: {}
	}
	
#line 48 "../../../benchmarks/c/src/ragel/submatch_12__alt1_8.rl"

	
	in->p = p;
	in->pe = pe;
}
